# forge

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: release-testpypi.yml  release.yml
backend/: requirements.txt
backend/app/: cli.py  config.py  db.py  main.py  migrations.py  runtime.py
backend/app/api/: credentials.py  folders.py  models.py  sessions.py
backend/app/llm/: __init__.py  agent.py  compactor.py  context.py  model_info.py  prompts.py  providers.py  subagent.py  titler.py
backend/app/schemas/: credentials.py  folders.py  sessions.py
backend/app/store/: credentials.py  messages.py  sessions.py
backend/app/tools/: __init__.py  _common.py  ask_user.py  bash.py  edit.py  glob.py  grep.py  multi_edit.py  notebook_edit.py  plan_mode.py  policy.py  read.py  subagent.py  todo.py  web.py  write.py
backend/app/ws/: session_ws.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  theme.ts  types.ts
frontend/src/api/: rest.ts  ws.ts
frontend/src/components/: ConfirmModal.tsx  CredentialsPage.tsx  Dropdown.tsx  FolderBrowser.tsx  HomePage.tsx  Markdown.tsx  MentionPicker.tsx  MessageList.tsx  NewSessionModal.tsx  PromptInput.tsx  QuestionModal.tsx  SessionView.tsx  SessionsPage.tsx  Sidebar.tsx  ToolCallCard.tsx
scripts/: build-wheel.sh
