[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "forge-agent"
version = "0.1.1"
description = "Self-hosted local web UI for driving Claude or OpenAI coding agents from a browser."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harsh" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.1",
]

[project.scripts]
forge = "app.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]
sources = ["backend"]
# The frontend bundle lands in backend/app/static/ via scripts/build-wheel.sh.
# That directory is gitignored, so list it as an artifact to ensure hatchling
# bundles it into the wheel anyway.
artifacts = ["backend/app/static/**"]

[tool.hatch.build.targets.sdist]
include = [
    "backend/app/**",
    "frontend/**",
    "scripts/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "frontend/node_modules",
    "frontend/dist",
    "frontend/vite.config.js",
    "frontend/vite.config.d.ts",
    "frontend/*.tsbuildinfo",
    "**/__pycache__",
    "**/.DS_Store",
]
